# agent-ferry

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  PRIVACY.md  READE_DEV.md  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
brand/logo-concepts/: README.md  browser-extension-logo-spec.md  showcase.html
crates/: AGENTS.md
crates/agent-ferry-claude/: Cargo.toml
crates/agent-ferry-claude/src/: lib.rs
crates/agent-ferry-cli/: Cargo.toml
crates/agent-ferry-cli/src/: hermes_setup.rs  main.rs  service.rs  uninstall.rs  update.rs
crates/agent-ferry-cli/tests/: claude_cli.rs  codex_cli.rs  connection_cli.rs  data_cli.rs  opencode_cli.rs  service_cli.rs  uninstall_cli.rs  update_cli.rs  workspace_cli.rs
crates/agent-ferry-codex/: Cargo.toml
crates/agent-ferry-codex/src/: lib.rs
crates/agent-ferry-core/: Cargo.toml
crates/agent-ferry-core/src/: lib.rs  workspace.rs
crates/agent-ferry-daemon/: AGENTS.md  Cargo.toml
crates/agent-ferry-daemon/src/: history.rs  lib.rs  main.rs
crates/agent-ferry-daemon/tests/: chunked_handoff.rs  claude_handoff.rs  codex_handoff.rs  hermes_handoff.rs  ipc_boundary.rs  opencode_handoff.rs  workspace_configuration.rs
crates/agent-ferry-hermes/: Cargo.toml
crates/agent-ferry-hermes/examples/: fake_hermes.rs
crates/agent-ferry-hermes/src/: lib.rs
crates/agent-ferry-hermes/tests/: capability_discovery.rs  runs_api.rs  ssh_tunnel.rs
crates/agent-ferry-host/: Cargo.toml
crates/agent-ferry-host/src/: main.rs
crates/agent-ferry-host/tests/: native_bridge.rs
crates/agent-ferry-opencode/: Cargo.toml
crates/agent-ferry-opencode/src/: lib.rs
crates/agent-ferry-protocol/: Cargo.toml
crates/agent-ferry-protocol/src/: lib.rs
crates/agent-ferry-transport/: Cargo.toml
crates/agent-ferry-transport/src/: lib.rs
docs/: README.md  documentation-lifecycle.md  glossary.md
docs/acceptance/: case-template.md  evidence-contract.md
docs/adr/: 0001-handoff-auto-start.md  0002-capture-browser-content.md  0003-generic-page-capture-first.md  0004-hybrid-content-extraction-with-defuddle.md  0005-hermes-owns-document-persistence.md  0006-target-specific-handoff-configuration.md  0007-local-daemon-as-handoff-hub.md  0008-macos-first-client.md  0009-claude-acp-managed-session.md  0010-browser-mediated-permission-approval.md  0011-local-content-via-temporary-artifact.md  0012-single-visible-effective-prompt.md  0013-remote-hermes-before-local-hermes.md  0014-hermes-direct-first-ssh-fallback.md  0015-hermes-content-inline-in-runs-input.md  0016-one-target-per-handoff.md  0017-full-acp-messaging-in-v01.md  0018-lightweight-core-on-demand-agent-packs.md  0019-cli-managed-agent-installation.md  0020-host-agent-and-acp-adapter-installation-boundary.md  0021-host-agent-authentication-boundary.md  0022-host-executable-resolution.md  0023-host-version-drift-and-adapter-compatibility.md  0024-authenticated-daemon-connectors.md  0025-connector-capability-authorization.md  0026-v01-one-shot-unrestricted-claude-print-mode.md  0027-independent-concurrent-print-tasks.md  0028-v01-live-only-result-delivery.md  0029-remote-hermes-live-only-run.md  0030-bounded-local-task-history.md  0031-cli-style-install-and-data-layout.md  0032-homebrew-distribution-without-developer-id.md  0033-native-homebrew-bottles.md  0034-explicit-homebrew-activation.md  README.md
docs/architecture/: dependency-rules.md  overview.md
docs/design/: agent-pack-assembly.md  v01-top-level-architecture.md
docs/prd/: v01-browser-to-agent-handoff.md
docs/research/: acp-client-reuse.md  install-dependency-matrix.md  multi-agent-acp-stack.md  remote-hermes-connectivity.md
docs/runbooks/: chrome-web-store.md  development.md  installation.md  macos-service.md  real-environment-acceptance.md  release.md
extension/: AGENTS.md  ASSET_SOURCES.md  package-lock.json  package.json  wxt.config.ts
extension/entrypoints/: background.ts  extract-page.content.ts  extract-page.ts
extension/entrypoints/onboarding/: index.html  main.tsx  style.css
extension/entrypoints/popup/: index.html  main.tsx  style.css
extension/lib/: agent-selection.test.ts  agent-selection.ts  arxiv-html-extractor.test.ts  arxiv-html-extractor.ts  arxiv-pdf-extractor.test.ts  arxiv-pdf-extractor.ts  handoff-transfer.test.ts  handoff-transfer.ts  history-view.test.ts  history-view.ts  prompt-templates.test.ts  prompt-templates.ts  x-thread-extractor.test.ts  x-thread-extractor.ts
release/: chrome-extension-identity.example.json  chrome-extension-identity.json
release/chrome-store/: listing-zh-CN.txt
release/homebrew/: agent-ferry.rb.in
scripts/: build-homebrew-bottle  build-macos-release  check-architecture  check-architecture-boundaries.mjs  check-docs  check-document-links.mjs  check-documentation-contract.mjs  check-homebrew-release-config  check-links  check-release-environment  check-release-version.mjs  check-store-readiness.mjs  check-toolchain.mjs  context  extension-identity.mjs  find-node  install-git-hooks  install.sh  notarize-macos-release  package-chrome-extension  package-homebrew-release  package-macos-release  render-homebrew-formula.mjs  render-installer.mjs  resolve-context.mjs  sign-macos-release  test-extension-identity.mjs  test-extension-release  test-homebrew-bottle-build  test-homebrew-install  test-homebrew-release  test-macos-installer  test-release-environment  test-release-pipeline  verify  verify-macos-release  write-verification-evidence.mjs
scripts/lib/: extension-identity.mjs
test-fixtures/: arxiv-html.html  generate_pdf_fixtures.py  large-article.html  lazy-article.html  x-thread.html
