[workspace]
members = [
    "crates/agent-ferry-cli",
    "crates/agent-ferry-core",
    "crates/agent-ferry-host",
    "crates/agent-ferry-protocol",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
