[workspace]
members = [
    "crates/agent-ferry-cli",
    "crates/agent-ferry-claude",
    "crates/agent-ferry-codex",
    "crates/agent-ferry-core",
    "crates/agent-ferry-daemon",
    "crates/agent-ferry-host",
    "crates/agent-ferry-hermes",
    "crates/agent-ferry-opencode",
    "crates/agent-ferry-protocol",
    "crates/agent-ferry-transport",
]
resolver = "3"

[workspace.package]
version = "0.1.5"
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
fs2 = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
security-framework = "3"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
url = { version = "2", features = ["serde"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
