[package]
name = "agent-ferry-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
agent-ferry-core = { path = "../agent-ferry-core" }
agent-ferry-claude = { path = "../agent-ferry-claude" }
agent-ferry-codex = { path = "../agent-ferry-codex" }
agent-ferry-hermes = { path = "../agent-ferry-hermes" }
agent-ferry-opencode = { path = "../agent-ferry-opencode" }
agent-ferry-protocol = { path = "../agent-ferry-protocol" }
agent-ferry-transport = { path = "../agent-ferry-transport" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[[bin]]
name = "aferry"
path = "src/main.rs"

[dev-dependencies]
agent-ferry-daemon = { path = "../agent-ferry-daemon" }
tokio.workspace = true
