[package]
name = "agent-ferry-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
agent-ferry-protocol = { path = "../agent-ferry-protocol" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
