[package]
name = "agent-ferry-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
agent-ferry-core = { path = "../agent-ferry-core" }
agent-ferry-protocol = { path = "../agent-ferry-protocol" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[[bin]]
name = "agentferryd"
path = "src/main.rs"

[dev-dependencies]
uuid.workspace = true
