[package]
name = "agent-ferry-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
agent-ferry-claude = { path = "../agent-ferry-claude" }
agent-ferry-codex = { path = "../agent-ferry-codex" }
agent-ferry-core = { path = "../agent-ferry-core" }
agent-ferry-hermes = { path = "../agent-ferry-hermes" }
agent-ferry-opencode = { path = "../agent-ferry-opencode" }
agent-ferry-protocol = { path = "../agent-ferry-protocol" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[[bin]]
name = "agentferryd"
path = "src/main.rs"

[dev-dependencies]
uuid.workspace = true
