[package]
name = "agent-ferry-hermes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
agent-ferry-core = { path = "../agent-ferry-core" }
agent-ferry-protocol = { path = "../agent-ferry-protocol" }
agent-ferry-transport = { path = "../agent-ferry-transport" }
futures-util.workspace = true
reqwest.workspace = true
security-framework.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true
